--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "seatunnel-builder",
+  "homepage": "https://amol64546.github.io/seatunnel-web",
+  "name": "seatunnel-web",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://10.10.10.32:30001/hazelcast/rest/maps",
@@ -19,6 +20,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
